--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,9 @@ Version 0.1.9: (master)
         - Implementing a prune callback
        
     Adding add_lookup_data to the CachedDataloader, which makes a conversion to the CachedDataloaderwLookup instance
-       
+    
+    Adding duplicate_index_file method to CachedDataloader
+    
     Adding tutorials folder with python scripts for examples
         - Creation of a classifier_example
     
