Major refactor of the data API

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 Version 0.2.1: (master)
     
-    Changing dataAPI, now utilizes python generates and only makes a conversion to tf.data.Dataset when calling to_tfDataset()
+    Major refactor of the data.py API, now utilizes python generates and only makes a conversion to tf.data.Dataset when calling to_tfDataset()
+    
+    Changing the logging mechanism, now it utilizes a global library logger, instead of the BaseLogger Class (which was depricated)
     
 
 Version 0.2.0:
