--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Version 0.2.1: (master)
     
     Changing the logging mechanism, now it utilizes a global library logger, instead of the BaseLogger Class (which was depricated)
     
+    Change the logger default level to INFO and add an env variable that controls its value
+    
 
 Version 0.2.0:
     Adding multiGPU training with the integration of the horovod library, which handles the communication between the GPU or machines.
