--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@ Version 0.2.1: (master)
     
     Change the logger default level to INFO and add an env variable that controls its value
     
+    Adding a profiler, that traces the current tf train graph and also write its operations
+    
 
 Version 0.2.0:
     Adding multiGPU training with the integration of the horovod library, which handles the communication between the GPU or machines.
